<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/ivCoinLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9C27B0"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/separate"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogo" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3F51B5"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label"
                android:textSize="18sp"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tvPriceLabel"
                app:layout_constraintTop_toTopOf="@+id/tvPriceLabel"
                tools:text="6080.45"
                android:layout_marginStart="8dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel"
                android:background="#65000000"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/tvPriceMinLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_min"
                android:textSize="18sp"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/tvPriceMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintStart_toEndOf="@+id/tvPriceMinLabel"
                app:layout_constraintTop_toTopOf="@+id/tvPriceMinLabel"
                tools:text="5900.9042"
                android:layout_marginStart="8dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceMinLabel"
                android:background="#65000000"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:id="@+id/tvPriceMaxLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_max"
                android:textSize="18sp"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceMinLabel"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/tvPriceMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light"
                app:layout_constraintStart_toEndOf="@+id/tvPriceMaxLabel"
                app:layout_constraintTop_toTopOf="@+id/tvPriceMaxLabel"
                tools:text="6180.45"
                android:layout_marginStart="8dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceMaxLabel"
                android:background="#65000000"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:id="@+id/tvLastMarketLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_market"
                android:textSize="18sp"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceMaxLabel"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/tvLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tvLastMarketLabel"
                app:layout_constraintTop_toTopOf="@+id/tvLastMarketLabel"
                tools:text="Some market"
                android:layout_marginStart="8dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLastMarketLabel"
                android:background="#65000000"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:id="@+id/tvLastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated"
                android:textSize="18sp"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastMarketLabel"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tvLastUpdateLabel"
                app:layout_constraintTop_toTopOf="@+id/tvLastUpdateLabel"
                tools:text="20:56:01"
                android:layout_marginStart="8dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>