<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.CoinDetailActivity">

        <ImageView
            android:id="@+id/ivCoinLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvFromSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#9C27B0"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
            app:layout_constraintEnd_toStartOf="@+id/tvSlash"
            app:layout_constraintTop_toTopOf="@+id/tvSlash"
            tools:text="BTC" />

        <TextView
            android:id="@+id/tvSlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/separate"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCoinLogo" />

        <TextView
            android:id="@+id/tvToSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#3F51B5"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
            app:layout_constraintStart_toEndOf="@+id/tvSlash"
            app:layout_constraintTop_toTopOf="@+id/tvSlash"
            tools:text="USD" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/tvSlash">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/tvPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:paddingStart="8dp"
                    android:text="@string/price_label"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/tvPriceLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvPriceLabel"
                    tools:text="6080.45" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#65000000"
                    app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel" />

                <TextView
                    android:id="@+id/tvPriceMinLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingStart="8dp"
                    android:text="@string/price_min"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel" />

                <TextView
                    android:id="@+id/tvPriceMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/tvPriceMinLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvPriceMinLabel"
                    tools:text="5900.9042" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#65000000"
                    app:layout_constraintTop_toBottomOf="@+id/tvPriceMinLabel" />

                <TextView
                    android:id="@+id/tvPriceMaxLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingStart="8dp"
                    android:text="@string/price_max"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPriceMinLabel" />

                <TextView
                    android:id="@+id/tvPriceMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/tvPriceMaxLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvPriceMaxLabel"
                    tools:text="6180.45" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#65000000"
                    app:layout_constraintTop_toBottomOf="@+id/tvPriceMaxLabel" />

                <TextView
                    android:id="@+id/tvLastMarketLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingStart="8dp"
                    android:text="@string/last_market"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPriceMaxLabel" />

                <TextView
                    android:id="@+id/tvLastMarket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/tvLastMarketLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvLastMarketLabel"
                    tools:text="Some market" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#65000000"
                    app:layout_constraintTop_toBottomOf="@+id/tvLastMarketLabel" />

                <TextView
                    android:id="@+id/tvLastUpdateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingStart="8dp"
                    android:text="@string/updated"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLastMarketLabel" />

                <TextView
                    android:id="@+id/tvLastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/tvLastUpdateLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvLastUpdateLabel"
                    tools:text="20:56:01" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>